# Sentiment-Analysis

./: README.md
Sentiment_Analysis/: BUILD_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  PROJECT_STRUCTURE.txt  QUICK_REFERENCE.md  SYSTEM_COMPLETE.md  run_server.bat  run_server_hidden.bat
Sentiment_Analysis/vader-sentiment-project/: README.md  SUPPORT_SYSTEM_README.md  example_tickets.db  pyproject.toml  quick_start_example.py  requirements.txt  test_support_system.py  test_tickets.db
Sentiment_Analysis/vader-sentiment-project/src/: app.py  support_server.py  support_tickets.db  web_app.py
Sentiment_Analysis/vader-sentiment-project/src/templates/: index.html  index_static.html  support_dashboard.html
Sentiment_Analysis/vader-sentiment-project/src/vader_sentiment/: __init__.py  analyzer.py  cli.py  structure.py  summarizer.py  ticket_prioritizer.py  ticket_store.py  utils.py
Sentiment_Analysis/vader-sentiment-project/tests/: test_analyzer.py
