[tool.poetry]
name = "vader-sentiment-project"
version = "0.1.0"
description = "A project for sentiment analysis using VADER."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
vaderSentiment = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"